--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div id="container">
       <div id="profile">
         
-      <img src="./Assets/avatar_escuro.jpg"
+      <img src="./Assets/avatar_claro.jpg"
              alt="foto de óculos escuros"
              />
         
