--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div id="container">
       <div id="profile">
          <img 
-             src="./Assets/avatar_claro.png"
+             src="./assets/avatar_claro.png"
              alt="foto de óculos escuros"
              />
             <p>@Efidê</p>
@@ -61,13 +61,12 @@
         <a href="https://www.pinterest.com/fdclick" target="_blank">
           <ion-icon name="logo-pinterest"></ion-icon>
         </a>
-                </div>
-               <footer>
+      </div>
+      <footer>
             "Todos os direitos reservados." - Copyright 2023 -  </a>
           </footer>
         </div>
          
-        
         <script  
            type = "module"  
            src = "https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js" 
