--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div id="container">
       <div id="profile">
          <img 
-             src="Assets/avatar_claro.png"
+             src="./Assets/avatar_claro.png"
              alt="foto de óculos escuros"
              />
             <p>@Efidê</p>
