--- a/index.html
+++ b/index.html
@@ -19,8 +19,9 @@
       <div id="profile">
          <img 
              src="./Assets/avatar_claro.png"
-             alt="foto de óculos escuros"
-             />
+             alt="foto de óculos escuros">;
+         
+          />
             <p>@Efidê</p>
       </div>
           
