--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <div id="profile">
          <img 
              src="./Assets/avatar_claro.png"
-             alt="foto de óculos escuros">;
+             alt="foto de óculos escuros";
               
             />
         
